--- a/README
+++ b/README
@@ -2,13 +2,13 @@ Description: A simple regression testing framework for LFE.
 
 Compile
 -------
-     erl -noshell -pa $WORK_PATH -pa $LFE_PATH \
+     erl -noshell -pa $LFE_PATH \
          -eval 'code:load_file(demo).' \
          -eval 'io:format("~n~p~n",[demo:start()]).' -s erlang halt
 
 Run tests
 ---------
-     erl -noshell -pa $WORK_PATH -pa $LFE_PATH \
+     erl -noshell -pa $LFE_PATH \
          -eval 'code:load_file(demo).' \
          -eval 'io:format("~n~p~n",[demo:start()]).' -s erlang halt
 
